--- a/VRChat/28/941328.html
+++ b/VRChat/28/941328.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zqcIHFlYjpcYcQWr7jb0ncenlJvmUVmuceHl4e6zrK8="></script>
+    "R9O0xolziAisJM01vA/bYGO1WhdlQpOaQH2aVTvc0nM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3D小物]マジックハンド","description":"主にVRChatでの利用を目的としたマジックハンドの3Dモデルです。\nシェイプキーで指部分の変更およびリンク部分が伸びます。\n伸びるシェイプキーを握りのアニメーションに入れることで、\n伸び縮みを自在に操って楽しめます。\n(設定の仕方がわからない？リプでもDMでもinviteでもなんでもください。)\n\nblendファイルも付属しておくので自由に改造してください。\nテクスチャはえいやでサブスタ塗装のものを2種。(デフォは赤と黄色のおもちゃ風です。)\n\n手に何か持たせたいけど、武器はちょっと・・・というそこのあなた。\n最近移動するの面倒だから手が伸びないかなと思っているそこのあなた。\nどうぞ。\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage　⁺　blend\n　ポリゴン数：約3000\n　その他：シェイプキー4種在り(ぐー、ちょき、サムズアップ、伸びる)\n　テクスチャ：2種在り(おもちゃ風、業務用)\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n　\nその他\n　使ってる報告してくれると泣いて喜びます。\n　不具合あったらこっそり教えてね。\n","url":"https://booth.pm/ja/items/941328","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/941328/be7da0e5-3fcc-41a5-a987-3512ee6d073e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zqcIHFlYjpcYcQWr7jb0ncenlJvmUVmuceHl4e6zrK8="></script>
+    nonce="R9O0xolziAisJM01vA/bYGO1WhdlQpOaQH2aVTvc0nM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      65
+                                      64
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      65
+                                      64
                                     </div>
                                   </div></a>
                                 </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
