--- a/VRChat/66/945666.html
+++ b/VRChat/66/945666.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rJFzfmDFJbiuYZLZ16+RVS4JpJ2jKNBLgVDlnb4wN58="></script>
+    "mxIibiqU9PVlD1bnUMNTIf/MWoNKTb5IBGhSUdqxdEs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用回転台","description":"VRChatで使えるgenericで回り続ける回転台です。\n使い方は付属のread meを参照してください。\nサイズは高さ約21cm縦横約140㎝です。\n一応blendファイルも付けていますがそちらはサイズや位置が異なるので注意してください。\n※2枚目はイメージです。上に載っているモデルは付属しません \n\n改変はご自由にしていただいて大丈夫です。\n再配布のみ禁止。","url":"https://booth.pm/ja/items/945666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/945666/4bc2f93e-c5bb-4b01-80b6-342482d9e30b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rJFzfmDFJbiuYZLZ16+RVS4JpJ2jKNBLgVDlnb4wN58="></script>
+    nonce="mxIibiqU9PVlD1bnUMNTIf/MWoNKTb5IBGhSUdqxdEs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -356,9 +356,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
