--- a/VRChat/19/945519.html
+++ b/VRChat/19/945519.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ciatydQLGQDkqh+16USSfaXBnZ/O/7qCmZPQNWqM06Q="></script>
+    "rCuNMMh7fehg1+vBrq2tRaqA/fxzhA8IGwsRO5b4xtw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ダンボールの羽と輪","description":"Vrchatでの使用を想定していますが、その他の用途でもご使用いただけます。\n\n・ポリゴン数　△520\n\n利用規約\n・本モデルをダウンロードした時点で本利用規約に同意したものとします。\n・利用規約は予告なく変更する場合があり、最新のものが適用されます。\n・本データ、改変されたデータの著作権は制作者つぐに帰属します。\n・再配布は禁止。商用利用、改変は可能です。\n・他人に迷惑をかけるような使用はしないでください。\n・いかなる場合においても、このモデルによって生じた責任を負いかねます。\n自己責任での使用をお願いします。\n\n連絡先\n・ツイッター\n@Tsugu_VRC\n\n・Mail\ntsugu.vrc@gmail.com \n\nアップデート\n\n2020/5/21　\n 1.1 .objファイルの追加\n 2.0 利用規約の更新、モデルの差し替え","url":"https://booth.pm/ja/items/945519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e3d8485-d999-4652-856e-1c6203a7e1e6/i/945519/90f7e66f-3327-4759-a111-c9ee998c5b79_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ciatydQLGQDkqh+16USSfaXBnZ/O/7qCmZPQNWqM06Q="></script>
+    nonce="rCuNMMh7fehg1+vBrq2tRaqA/fxzhA8IGwsRO5b4xtw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -411,9 +411,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
