--- a/VRChat/99/944399.html
+++ b/VRChat/99/944399.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xbk16fS7zlyvm8L16CoPwLNdoe520cCPyFaGpVew190="></script>
+    "rYleV+IIdy4tNhNtFJdNWnI1GWQFICDiNAcT0Zo732o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしきぐるみぺんぎんぱっく.blend","description":"VRChatでの使用を想定したペンギンのきぐるみです。(ある程度のBlender、アバターセットアップの知識が必要です)\n\n■内容物\n\n・モデルデータ(.blend形式)\n・テクスチャ3枚\n・よわよわぺんぺんForceのロゴ(使用する必要は一切ありません)\n\n\n■ざっくりとした利用方法\n\nblender上でお好みの頭部オブジェクトを挿入して頭部オブジェクトとアーマチュアを選択、Ctrl+Pでアーマチュア変形を選択して関連付けてください。\n\nその後ウェイトをHeadボーンに全塗り。fbx形式でエクスポートして、テクスチャと一緒にUnityにぶちこめば多分使えます。\n\nメガネやリボンが不要な場合は消してください。\n\n(※8/12追記)利用方法を解説した動画を投稿しました。下部にはっつけてありますので参照してください。\n\n■使用上の注意\n\nおためし版のため様々な不具合がある可能性があります。何か不明な点やお気づきの点はお手数ですが作者twitter(@popico_VT)までご一報ください。\n\nおためし版のため指は動きません。\n\n■利用規約\n\nモデルに組み込んでの利用→商用、非商用を問わず自由に改変、使用、再配布可\n単体での改変、再配布→不可\n\n使用したSSをSNS等に上げると作者が喜びます","url":"https://booth.pm/ja/items/944399","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/944399/99d5520e-70d9-4367-b8d4-ba4c34fa4dab_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xbk16fS7zlyvm8L16CoPwLNdoe520cCPyFaGpVew190="></script>
+    nonce="rYleV+IIdy4tNhNtFJdNWnI1GWQFICDiNAcT0Zo732o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -376,9 +376,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
