--- a/VRChat/46/936646.html
+++ b/VRChat/46/936646.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6bqS8PncdVtSfx6rZRoHs1zPL6ZLAc7MgZDh1lehlHo="></script>
+    "uzaTUJx/aejF/jub8bEPm1gRQYrv8/vVnxNrCOszeLE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター】Rana ラナ (Ver3.0) ","description":"【 UpDate-2021/09/26 】------------------------------\n・ダークバージョンの追加。既にご購入されている方は\nRana_Ver3.0_DarkA_20210925.zipのファイルのDLお願いします。\n------------------------------------------------\n■ダークバージョンは独立したモデルとなっています。\nVRC向けのUnityPackage\n(VRC-Avatar3.0基本設定済み、Dynamic Bone設定済み\nはシーン選択によって有り無し可・\nユニティちゃんトゥーンシェーダー使用)、VRM、FBXと\n各対応しています。\n\nまた改変用のUV展開図レイヤーを付加したPSDをご用意しています。\nただ、塗り、影等の要素分けレイヤー化している部分は\n限定的なのでご注意ください。\n\n■これまで販売してましたRana Fastと入れ替え\nRana Ver3.0の公開となりました。\n\nDL出来るデータとしてはFastも含まれていますが、\n今後はVer3.0がメインになります。\n\nFastを長らく可愛がってくださりありがとうございます。\nまた、FastのコスチュームはVer3.0にリメイク予定です。\n\n制作過程やキャラクターの世界設定はFanBoxで公開しています。\nhttps://honeyray.fanbox.cc/\n可愛がっていただければ幸いです。\n\n------------------------------------------------------\n※※※ ご注意 ※※※\n本データのモデルはFBX形式のみになっており\n購入後、そのまますぐに使えるという訳ではありません。\n\nUnity内に本データであるFBXを読み込み\nHumanoid状態からブレンドシェイプ、\n揺れ設定やシェーダー等の設定作業が必要になります。\n\nまた、素体を利用してコスチューム自作等は\nBlender等の3Dソフト使用してカスタマイズしてください。\n\n詳細は同梱データ内のマニュアルをご覧ください。\n尚、マニュアルはVRM、VRCに変換する詳細な手順は記載していません。\nカスタムする為のモデルデータ・テクスチャの解説をしています。\n------------------------------------------------------\n■同梱データ\n・FBX\n・画像データ(PSD、PNG)\n・マニュアル\n・テキスト\n\n■データ詳細\n・モーフ　(表情23種、耳9種)\n・ポリゴン数　33850\n・素体有り\n\n■利用規約について\n・著作権は放棄していません。(クレジット表記は不要)\n・VR空間、配信、動画媒体での商用利用は個人、法人に限らず可能。\n・改変、改造は可能。\n・未改変、未改造、さらに改変後、改造後での再配布、転売は禁止。\n・一般的な公序良俗に反する表現や行為、宗教的、政治的に使用禁止。\n・モザイクを必要とする18禁表現、用途は禁止。\n・3Dプリンタ等でフィギュア化することを\n　個人利用の範囲であれば許可しますが\n　出力物を配布、販売するのは禁止します。\n\n■免責事項\n・本データの利用において、何らかのトラブル、\n　損失が生じたとしても当方は一切の責任を負いません。\n\n・利用規約についての内容は予告なく変更する場合があります。\n\n※利用規約、免責事項の詳細は\n　同梱しているReadmeテキストをご覧ください。\n\n\n\n■バージョン履歴\n2021/04/11-3.0a\n2020/05/07-3.0","url":"https://booth.pm/ja/items/936646","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2100"},"image":"https://booth.pximg.net/c/620x620/ddadc202-dbe9-4f85-83b4-97cd420b1442/i/936646/150b9020-bf8b-4313-b8a6-37dae3dc460d_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6bqS8PncdVtSfx6rZRoHs1zPL6ZLAc7MgZDh1lehlHo="></script>
+    nonce="uzaTUJx/aejF/jub8bEPm1gRQYrv8/vVnxNrCOszeLE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -588,9 +588,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
