--- a/VRChat/00/944300.html
+++ b/VRChat/00/944300.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "swsPLV6UlRdmO9bzid7OEFWh3FC4/eZg+dHzN2Hts7s="></script>
+    "Y+PKWitZIcPdMaJzTFWdis6I/UdvTeAVQCSRLM8uEz4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドーナツ【3Dモデルデータ】","description":"ヴェニードーナツつくったヨ♪＼( 'ω')／\n\n・内容データ\ndonuts.fbx\ndonuts.png\ndonuts1.png\ndonuts_box.png\ndonuts.unitypackage\n\nドーナツのobjデータ一式\n\nunitypackageデータにはテクスチャが割り当て済みのprefabデータが入っております。\nunityにて使用される場合には好みのシェーダーを割り当て直し活用くださいませ。\nトゥーンシェーダーを推奨致します。\npackageの出力環境はunity2018.1.3f1となります。\n\n内容データに不具合やご不明な点がございましたら\nお手数をおかけしますがtwitterにて@tukabutter3までお問合せくださいませ。\n\n※生じた利益はすべてヴァニラフォレノワールのVtuberとしての活動資金となります。","url":"https://booth.pm/ja/items/944300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b806abcd-e19e-48f8-a6f5-5246084ad2fa/i/944300/bba8bd71-cf7e-4fd9-b7d2-4ae7124e4fbc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="swsPLV6UlRdmO9bzid7OEFWh3FC4/eZg+dHzN2Hts7s="></script>
+    nonce="Y+PKWitZIcPdMaJzTFWdis6I/UdvTeAVQCSRLM8uEz4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -411,9 +411,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
