--- a/VRChat/03/944103.html
+++ b/VRChat/03/944103.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4okhBopmzsnwlSUoxQSxVzvwAFEhSEs5fb/6gHyPjJA="></script>
+    "MimW62iuaVPvYw49nxRh7Vu1MCdOv0wvqktc/yZlnME="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『nureT』","description":"○VRChatデスクトップモード想定のオリジナル3Dモデルです。\n・VRでの動作は確認していません。\n\n○VRchatでSift+F3～F8を押すとTシャツの文字と表情が変わります。\n・文字は改変しやすいと思うので、お好みの文字を作ってください。\n・改変方法の説明画像も同梱しています。\n\n○UnityのHumanoid形式に対応\n\n○リップシンク15種、自動まばたき登録済のUnityPackage同梱\n・UnityPackageを読み込む前にVRchatSDKをインポートしてください。\n・DynamicBoneもあれば先にインポートしてください。\n\n\n○ 内容物\n1.UnityPackage\n2.テクスチャ(psd、png)\n3.blendファイル\n4.fbxファイル\n\n\n○改変可\n\n○商用利用可\n・クレジット不要\n\n○本モデルデータの再配布禁止\n・個人でのVRchatでの利用は可\n・VRChatのペデスタルへの使用は禁止\n\n\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/944103","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a7f87b5f-0026-44e2-91d9-d4b600441db7/i/944103/7933fe70-1b78-461b-a507-5920ec3518a1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4okhBopmzsnwlSUoxQSxVzvwAFEhSEs5fb/6gHyPjJA="></script>
+    nonce="MimW62iuaVPvYw49nxRh7Vu1MCdOv0wvqktc/yZlnME="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -429,9 +429,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
